clusters/develop/workloads/admin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nexora-admin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`admin.develop.nxua.dev`)
      kind: Rule
      middlewares:
        - name: cloudflare-jwt-assertion
          namespace: traefik
        - name: secure-headers
      services:
        - name: nexora-admin
          port: 80
  tls:
    secretName: nexora-admin-tls
